--- a/report/document.tex
+++ b/report/document.tex
@@ -52,7 +52,7 @@
 \usepackage{listings}
 \lstset{ %
 language=Java,            % choose the language of the code
-basicstyle=\scriptsize,  % the size of the fonts that are used for the code
+basicstyle=\small,  % the size of the fonts that are used for the code
 basewidth={0.57em,0.57em},
 frame=trBL,			        % adds a frame around the code
 breaklines=true,		      % sets automatic line breaking
