--- a/report/references.bib
+++ b/report/references.bib
@@ -1,4 +1,44 @@
 % References
+http://download.eclipse.org/modeling/emf/emf/javadoc/2.8.0/org/eclipse/emf/ecore/package-summary.html
+@Misc{ EcoreAPI,
+	title = "Ecore API",
+	author = "Eclipse Foundation",
+	howpublished = "\url{http://download.eclipse.org/modeling/emf/emf/javadoc/2.8.0/org/eclipse/emf/ecore/package-summary.html}",
+	year = "2012",
+	note = "[Online; accessed 11-August-2012]"
+}
+
+@Misc{ EcoreExample,
+	title = "Eclipse Modeling Framework (EMF) - Tutorial",
+	author = "Lars Vogel",
+	howpublished = "\url{http://www.vogella.com/articles/EclipseEMF/article.html}",
+	year = "2012",
+	note = "[Online; accessed 11-August-2012]"
+}
+
+@INPROCEEDINGS{bpelMobileEngineHackmann06sliver:a,
+    author = {Gregory Hackmann and Mart Haitjema and Christopher Gill and Gruia-catalin Roman},
+    title = {Sliver: A BPEL Workflow Process Execution Engine for Mobile Devices},
+    booktitle = {in: Proceedings of 4th International Conference on Service Oriented Computing (ICSOC},
+    year = {2006},
+    pages = {503--508},
+    publisher = {Springer Verlag}
+}
+
+@incollection {bpelMobileEngineMora,
+   author = {Gunarathne, Thilina and Premalal, Dinesh and Wijethilake, Tharanga and Kumara, Indika and Kumar, Anushka},
+   affiliation = {University of Moratuwa Department of Computer Science and Engineering Sri Lanka},
+   title = {BPEL-Mora: Lightweight Embeddable Extensible BPEL Engine},
+   booktitle = {Emerging Web Services Technology},
+   series = {Whitestein Series in Software Agent Technologies and Autonomic Computing},
+   editor = {Pautasso, Cesare and Bussler, Christoph and Walliser, Marius and Brantschen, Stefan and Calisti, Monique and Hempfling, Thomas},
+   publisher = {Birkhäuser Basel},
+   isbn = {978-3-7643-8448-7},
+   keyword = {Computer Science},
+   pages = {3-20},
+   year = {2007}
+}
+
 @INPROCEEDINGS{Czarnecki03classificationof,
     author = {Krzysztof Czarnecki and Simon Helsen},
     title = {Classification of Model Transformation Approaches},
