--- a/report/BPEL.tex
+++ b/report/BPEL.tex
@@ -39,7 +39,7 @@ In a BPEL process, activities are used to define the process logic. Activities a
 
 \subsubsection{BPEL Communication}
 \label{BPELCommunication}
-BPEL processes need to communicate with each other and for this purpose they usually use the combination of a description language, WSDL (see section \ref{Wsdl}), and a protocol, SOAP. WSDL stands for Web Services Description Language and is used to define the interfaces between communicating processes. It means that WSDL determines the format of messages, their data types and types of ports used for transmitting messages \footnote{each port has a particular type(s) assigned and therefore it can receive/send messages of this type(s) only} Whereas WSDL defines the interface between processes, SOAP works on lower level and is used for transmitting the data. There is a detailed description of SOAP in section \ref{Soap} of this document.
+BPEL processes need to communicate with each other and for this purpose they usually use the combination of a description language, WSDL (see section \ref{Wsdl}), and a protocol, SOAP. WSDL stands for Web Services Description Language and is used to define the interfaces between communicating processes. It means that WSDL determines the format of messages, their data types and types of ports used for transmitting messages \footnote{each port has a particular type(s) assigned and therefore it can receive/send messages of this type(s) only} Whereas WSDL defines the interface between processes, SOAP works on lower level and is used for transmitting the data. There is a detailed description of SOAP in Section \ref{Soap} of this document.
 
 \begin{figure}
 \begin{center}
@@ -60,6 +60,8 @@ Table \ref{BPELfilesTable} summarizes the functionalities of the three files com
 
 %%%%%%%    Table %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}[h!]
+\caption{BPEL files' functionalities}
+\label{BPELfilesTable}
 \begin{center}
 \begin{tabular}{l l l}
 						\toprule
@@ -73,8 +75,6 @@ Input/Output 			& WSDL 			& .wsdl 			\\[0,1cm]
 						\bottomrule
 \end{tabular}
 \end{center}
-\caption{BPEL files' functionalities}
-\label{BPELfilesTable}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -85,6 +85,8 @@ Table \ref{BPELengines} represents several common BPEL engines developed by vari
 
 %%%%%%%%% Table %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}
+\caption{List of BPEL engines}
+\label{BPELengines}
 \begin{center}
 \begin{tabular}{l l l}  %\begin{tabular}{|p{5.5cm}|p{3cm}|p{2.5cm}|}
 						\toprule
@@ -101,7 +103,5 @@ WebSphere Process Server (IBM)	& WS-BPEL 2.0			& commercial		\\[0,1cm]
 						\bottomrule
 \end{tabular}
 \end{center}
-\caption{List of BPEL engines}
-\label{BPELengines}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
