added pics, some text and starte the skeleton of the Meth Approach

--- a/report/BPEL.tex
+++ b/report/BPEL.tex
@@ -39,7 +39,7 @@ In a BPEL process, activities are used to define the process logic. Activities a
 
 \subsubsection{BPEL Communication}
 \label{BPELCommunication}
-BPEL processes need to communicate with each other and for this purpose they usually use the combination of a description language, WSDL (see section \ref{Wsdl}), and a protocol, SOAP. WSDL stands for Web Services Description Language and is used to define the interfaces between communicating processes. It means that WSDL determines the format of messages, their data types and types of ports used for transmitting messages \footnote{each port has a particular type(s) assigned and therefore it can receive/send messages of this type(s) only} Whereas WSDL defines the interface between processes, SOAP works on lower level and is used for transmitting the data. There is a detailed description of SOAP in Section \ref{Soap} of this document.
+BPEL processes need to communicate with each other and for this purpose they usually use the combination of a description language, WSDL (see section \ref{Wsdl}), and a protocol, SOAP. WSDL stands for Web Services Description Language and is used to define the interfaces between communicating processes. It means that WSDL determines the format of messages, their data types and types of ports used for transmitting messages \footnote{each port has a particular type(s) assigned and therefore it can receive/send messages of this type(s) only} Whereas WSDL defines the interface between processes, SOAP works on lower level and is used for transmitting the data.
 
 \begin{figure}
 \begin{center}
