--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,57 @@
 % References
 http://download.eclipse.org/modeling/emf/emf/javadoc/2.8.0/org/eclipse/emf/ecore/package-summary.html
+http://www.acceleo.org/pages/architecture/en
+
+
+@Misc{ AcceleoPresentation,
+	title = "Acceleo Presentation",
+	author = "Obeo",
+	howpublished = "\url{http://www.acceleo.org/pages/home/en}",
+	year = "2008",
+	note = "[Online; accessed 23-August-2012]"
+}
+
+
+@Misc{ XMIandMOF,
+	title = "XMI and MOF: a mini-tutorial. Presented at XSE2001",
+	author = "Perdita Stevens",
+	howpublished = "\url{http://homepages.inf.ed.ac.uk/perdita/XMI/tutslides2up.pdf}",
+	year = "2001",
+	note = "[Online; accessed 22-August-2012]"
+}
+
+@Book{ Steinberg2009EMF,
+ author = "Steinberg David and Budinsky Frank and Paternostro Marcelo and Merks Ed}",
+ title = "EMF: Eclipse Modeling Framework 2.0",
+ year = "2009",
+ isbn = "0321331885",
+ edition = "2nd",
+ publisher = "Addison-Wesley Professional"
+} 
+
+@Misc{ AcceleoArchitectureWeb,
+	title = "Acceleo Architecture",
+	author = "Acceleo.org",
+	howpublished = "\url{http://www.acceleo.org/pages/architecture/en}",
+	year = "2012",
+	note = "[Online; accessed 22-August-2012]"
+}
+
+@manual{ UML20OCL,
+  author = "OMG",
+  title = "OCL 2.0",
+  year = "2006",
+  note = "OMG doc. ptc/06-05-01"
+}
+
+@Misc{ AcceleoUserGuide,
+	title = "Acceleo User Guide",
+	author = "Obeo",
+	howpublished = "\url{http://www.acceleo.org/doc/obeo/en/acceleo-2.6-user-guide.pdf}",
+	year = "2008",
+	note = "[Online; accessed 20-August-2012]"
+}
+
 @Misc{ EcoreAPI,
 	title = "Ecore API",
 	author = "Eclipse Foundation",
@@ -237,7 +289,7 @@ http://download.eclipse.org/modeling/emf/emf/javadoc/2.8.0/org/eclipse/emf/ecore
 	note = "[Online; accessed July-2012]"
 }
 
-@Misc{ SOAP,
+@Misc{ Soap,
 	title = "Simple Object Access Protocol",
 	author = "Jack Koftikian",
 	howpublished = "\url{www.sts.tu-harburg.de/pw-and-m-theses/2001/Koft01.pdf}",
