--- a/report/document.tex
+++ b/report/document.tex
@@ -6,11 +6,13 @@
 \usepackage{subfigure}
 \usepackage[final]{pdfpages} %To add the pdf page as frontpage
 \usepackage{booktabs} %For tables, horizontal and splittable lines
+\usepackage{rotating}
 \usepackage[format=hang,font=small,labelfont=bf]{caption} %To create bold caption for tables and pictures
 \setcounter{secnumdepth}{3} %Chap,Sec,Sub,Subsub
 \usepackage{fullpage} % to use the whole page 
 \usepackage{url}
 \usepackage{setspace}  
+\usepackage{hvfloat}
 \doublespacing     % Inter lines space
 
 %%%%%%%%%%%%%%% FANCY HDR Settings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
